--- a/src/App.css
+++ b/src/App.css
@@ -26,6 +26,10 @@ select {
   font-family: 'Courier New',Courier,'Lucida Sans Typewriter','Lucida Typewriter',monospace; 
 }
 
+.main h1 {
+  font-size: 1.5em;
+}
+
 .menu {
   position: fixed;
   bottom: 5px;
