--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -4,9 +4,15 @@
 
 .topics__item {
   transition: all 0.4s ease;
+  padding: 1px;
 }
 .topics__item:hover {
   transform: scale(1.03);
+}
+
+.home__type {
+  font-size: 11px;
+  background-color: #bfbfbf;
 }
 
 .paginator {
