--- a/src/components/topic/topic.css
+++ b/src/components/topic/topic.css
@@ -15,6 +15,13 @@
   margin-bottom: 70px;
 }
 
+.topic__tags {
+  background-color: #f1f1f1;
+  padding: 0 5px;
+  border-radius: 10px;
+  margin: 5px;
+}
+
 .comment__owner {
   text-align: right;
 }
