--- a/src/components/topic_view/topic_view.css
+++ b/src/components/topic_view/topic_view.css
@@ -17,3 +17,12 @@
   margin-top: 10%;
   padding: 50px 10px;
 }
+
+.topic_view__btn {
+  float: right;
+}
+
+/* stabilise flag position */
+.input-group > .dropup.input-group-btn {
+  vertical-align: top;
+}
