--- a/src/components/utils/menu/menu.css
+++ b/src/components/utils/menu/menu.css
@@ -4,14 +4,29 @@
   left: 10px;
 }
 
+.main-menu--mobile {
+  display: none;
+}
+
+
 .main-menu__link {
   margin: 0 20px;
   display: block;
-  font-size: 18px;
+  font-size: 20px;
   color: #337ab7;
   cursor: pointer;
 }
 
 .main-menu__link:hover { 
   color: #000; 
+}
+
+@media screen and (max-width: 600px) {
+  .main-menu {
+    display: none;
+  }
+
+  .main-menu--mobile {
+    display: block;
+  }
 }
