--- a/src/components/topic/topic.css
+++ b/src/components/topic/topic.css
@@ -10,6 +10,10 @@
   color: black;
 }
 
+.topic__container {
+  overflow: auto;
+}
+
 .topics__content-item {
   margin: 10px;
   margin-bottom: 70px;
