comment > shared trans.

--- a/src/components/topic/comments/progress_bar/progress_bar.css
+++ b/src/components/topic/comments/progress_bar/progress_bar.css
@@ -1,6 +1,11 @@
+.progress_bar {
+  margin: 15px 0 5px;
+}
+
 .progress_bar__assumed {
   background-color: #f7be5a;
 }
+
 .progress_bar__over {
   background-color: #5ed091;
 }
