--- a/src/components/topic/tags/tags.css
+++ b/src/components/topic/tags/tags.css
@@ -14,6 +14,15 @@
   margin: 5px;
 }
 
+.tags__title {
+  border: 2px solid gainsboro;
+  border-radius: 5px;
+  padding: 2px;
+  margin: 2px;
+  font-size: 14px;
+  margin-right: 5px;
+  /* color: lightgreen; */
+}
 
 .tags__badge {
   font-size: 11px;
