to dev.wfx (transactions) #3

--- a/src/components/topic/comments/transactions/transactions.css
+++ b/src/components/topic/comments/transactions/transactions.css
@@ -8,6 +8,14 @@
   cursor: pointer;
 }
 
+.transactions__header a {
+  color: inherit;
+}
+
+.transactions__header a:hover {
+  color: #5cb85c;
+}
+
 .transactions__line {
   color: #333;
   border-color: #ddd;
