--- a/src/components/app/App.css
+++ b/src/components/app/App.css
@@ -47,10 +47,21 @@ a:hover {
   margin-top: 16px;  
 }
 
+/* common */
+
 .menu {
   position: fixed;
   bottom: 5px;
   left: 5px;
   padding: 5px;
   background-color:grey;
+}
+
+.loading {
+  font-size: 12px;
+  color: grey;
+}
+
+.nav__back {
+  padding-top: 10px;
 }
