--- a/src/components/home/topic_list/topic_list.css
+++ b/src/components/home/topic_list/topic_list.css
@@ -15,3 +15,22 @@
 .topic_list__hide {
   display: none;
 }
+
+.topic_list__step {
+  margin-left: 20px;
+  font-size: 12px;
+  color: grey !important;
+}
+
+
+.topic_section__badge {
+  font-size: 11px;
+  padding: 5px;
+  background-color: #bfbfbf;
+  cursor: copy;
+  transition: transform 0.23s ease;
+}
+
+.topic_section__badge:hover {
+  transform: scale(1.6);
+}
