--- a/src/components/app/App.css
+++ b/src/components/app/App.css
@@ -34,7 +34,8 @@ a:hover {
 }
 
 .main { 
-  font-family: 'Courier New',Courier,'Lucida Sans Typewriter','Lucida Typewriter',monospace; 
+  font-family: 'Courier New',Courier,'Lucida Sans Typewriter','Lucida Typewriter',monospace;
+  margin-top: 10px;
 }
 
 .main h1 {
