--- a/src/components/utils/Loading/loading.css
+++ b/src/components/utils/Loading/loading.css
@@ -21,6 +21,21 @@
   animation-delay: .4s;
 }
 
+.loading__img {
+  max-width: 60px;
+  display: block;
+  margin: 0 auto;
+  margin-top: 5%;
+}
+
+.pulse {
+	animation-name: pulse_animation;
+	animation-duration: 1000ms;
+	transform-origin:70% 70%;
+	animation-iteration-count: infinite;
+	animation-timing-function: linear;
+}
+
 @keyframes blink {
   0% {
     opacity: .2;
@@ -31,4 +46,10 @@
   100% {
     opacity: .2;
   }
+}
+
+@keyframes pulse_animation {
+	0% { transform: scale(1); }
+	50% { transform: scale(1.08); }
+	100% { transform: scale(1); }
 }
