tree > two direction

--- a/src/components/home/topic_list/topic_list.css
+++ b/src/components/home/topic_list/topic_list.css
@@ -19,7 +19,9 @@
 .topic_list__step {
   opacity: 0.95;
   font-size: 12px;
-  margin-left: 20px;
+  margin-left: 15px;
+  padding-left: 5px;
+  border-left: 1px dotted lightblue;
 }
 
 .topic_section__badge {
