--- a/src/components/home/topic_list/topic_list.css
+++ b/src/components/home/topic_list/topic_list.css
@@ -21,17 +21,46 @@
   font-size: 12px;
   margin-left: 15px;
   padding-left: 5px;
-  border-left: 1px dotted lightblue;
+  border-left: 1px dashed lightgray;
 }
 
 .topic_section__badge {
   font-size: 11px;
   padding: 5px;
   background-color: #bfbfbf;
-  cursor: copy;
+}
+
+.topic_section__expand {
+  font-size: 18px;
+  padding: 6px;
+  background-color: rgb(191, 191, 191);
+  position: relative;
+  cursor: pointer;
   transition: transform 0.23s ease;
 }
 
-.topic_section__badge:hover {
-  transform: scale(1.6);
+.topic_section__expand:hover {
+  transform: scale(1.3);
+}
+
+.topic_section__expand:before {
+  position: absolute;
+  left: 3px;
+  top: 3px;
+  border-radius: 100%;
+  height: 6px;
+  width: 6px;
+  content: ' ';
+  background-color: #fff;
+}
+
+
+.point_pulse {
+	animation: point_pulse 1s infinite;
+  transform-origin:70% 70%;
+  animation-timing-function: linear;
+}
+
+@keyframes point_pulse {
+	50% { background-color: #fff; }
 }
