--- a/src/components/utils/Loading/loading.css
+++ b/src/components/utils/Loading/loading.css
@@ -1,26 +1,3 @@
-.loading {
-  padding: 30px;
-  text-align: center;
-  font-size: 18px;
-  color: grey;
-}
-
-.loading span {
-  font-size: 72px;
-  animation-name: blink;
-  animation-duration: 1.4s;
-  animation-iteration-count: infinite;
-  animation-fill-mode: both;
-}
-
-.loading span:nth-child(2) {
-  animation-delay: .2s;
-}
-
-.loading span:nth-child(3) {
-  animation-delay: .4s;
-}
-
 .loading__img {
   max-width: 60px;
   display: block;
@@ -29,23 +6,9 @@
 }
 
 .pulse {
-	animation-name: pulse_animation;
-	animation-duration: 1000ms;
-	transform-origin:70% 70%;
-	animation-iteration-count: infinite;
+	animation: pulse_animation 1s infinite;
+  transform-origin:70% 70%;
 	animation-timing-function: linear;
-}
-
-@keyframes blink {
-  0% {
-    opacity: .2;
-  }
-  20% {
-    opacity: 1;
-  }
-  100% {
-    opacity: .2;
-  }
 }
 
 @keyframes pulse_animation {
