--- a/src/components/home/topic_list/topic_list.css
+++ b/src/components/home/topic_list/topic_list.css
@@ -33,14 +33,21 @@
 .topic_section__expand {
   font-size: 18px;
   padding: 6px;
-  background-color: rgb(191, 191, 191);
+  /* background-color: rgb(191, 191, 191); */
+  /* background: linear-gradient(
+        to bottom,
+        #999 0%,
+        #999 50%,
+        #b6701e 50%,
+        #b6701e 100%
+      ); */
   position: relative;
   cursor: pointer;
-  transition: transform 0.23s ease;
+  /* transition: transform 0.23s ease; */
 }
 
 .topic_section__expand:hover {
-  transform: scale(1.3);
+  transform: scale(1.2);
 }
 
 .topic_section__expand:before {
