page > type list

--- a/src/components/topic/topic.css
+++ b/src/components/topic/topic.css
@@ -60,7 +60,7 @@
   margin: 0 5px;
   padding: 0 5px;
 
-  border: 2px solid tomato;
+  border: 2px solid rgb(205, 107, 127);
   border-radius: 2px;
 }
 
