--- a/src/scenes/StreamTab/StreamTab.css
+++ b/src/scenes/StreamTab/StreamTab.css
@@ -1,9 +1,43 @@
+.tab_container {
+  width: 600px;
+  position: relative;
+}
+
+@media (max-width: 900px) {
+  .tab_container {
+    width: 400px;
+  }
+
+  .stream_tab {
+    width: 400px;
+  }
+}
+
+@media (max-width: 600px) {
+  .tab_container {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    z-index: 2;
+    /* width: 400px; */
+  }
+
+  .stream_tab {
+    width: 400px;
+  }
+}
+
 .stream_tab {
-  min-width: 400px;
-  height: 100%;
+  padding: 10px;
+  height: 100vh;
+  position: fixed;
+  box-sizing: border-box;
+  /* min-width: 100%; */
+  width: 600px;
   border-left: 1px solid rgb(236, 236, 236);
   background-color: rgb(247, 247, 247); 
 }
+
 
 .stream_tab__container {
   width: 100%;
