--- a/src/scenes/home/topic_list/topic_list.css
+++ b/src/scenes/home/topic_list/topic_list.css
@@ -8,7 +8,7 @@
 }
 
 .topic_list__draft {
-  background-color: #ffffffce;
+  background-color: #fff;
   border-radius: 5px;
 }
 
@@ -19,9 +19,9 @@
 .topic_list__step {
   opacity: 0.95;
   font-size: 12px;
-  margin-left: 15px;
-  padding-left: 5px;
-  border-left: 1px dashed lightgray;
+  margin-left: 5px;
+  padding-left: 15px;
+  border-left: 2px dashed lightgray;
 }
 
 .topic_section__badge {
@@ -33,17 +33,8 @@
 .topic_section__expand {
   font-size: 18px;
   padding: 6px;
-  /* background-color: rgb(191, 191, 191); */
-  /* background: linear-gradient(
-        to bottom,
-        #999 0%,
-        #999 50%,
-        #b6701e 50%,
-        #b6701e 100%
-      ); */
   position: relative;
   cursor: pointer;
-  /* transition: transform 0.23s ease; */
 }
 
 .topic_section__expand:hover {
