--- a/src/scenes/App/App.css
+++ b/src/scenes/App/App.css
@@ -30,7 +30,8 @@
   overflow-x: hidden;
   font-size: 16px;
   padding: 10px;
-  max-width: 700px;
+  max-width: 600px;
+  flex-grow: 1;
 }
 
 .main_layout {
