--- a/src/scenes/StreamTab/StreamTab.css
+++ b/src/scenes/StreamTab/StreamTab.css
@@ -1,5 +1,5 @@
 .tab_container {
-  min-width: 600px;
+  width: 600px;
   position: relative;
 }
 
@@ -27,7 +27,7 @@
 
 @media (max-width: 1000px) {
   .tab_container {
-    min-width: 400px;
+    width: 400px;
   }
 
   .stream_tab {
@@ -37,7 +37,7 @@
 
 @media (max-width: 768px) {
   .tab_container {
-    min-width: 300px;    
+    width: 300px;    
   }
 
   .stream_tab {
@@ -47,9 +47,11 @@
 
 @media (max-width: 600px) {
   .tab_container {
-    position: fixed;
-    min-width: 100%;
+    width: 100%;
     height: 100%;
+    position: fixed;
+    top: 0;
+    right: 0;
     z-index: 2;
   }
 
