--- a/src/components/Balance/balance.css
+++ b/src/components/Balance/balance.css
@@ -1,5 +1,5 @@
 .balance__hours {
-  color: #000;
+  color: #fff;
   font-size: 13px;
   margin: 0 auto;
   display: inline-block;  
@@ -7,11 +7,20 @@
   text-align: center;
   margin: 0 5px;
   vertical-align: middle;
-
-  border: 2px solid rgb(205, 107, 127);
+  
+  background-color: rgb(118, 185, 118);
+  border: 1px solid rgb(118, 185, 118);  
   border-radius: 2px;
 }
 
 .balance__counter {
   padding: 5px;
+}
+
+.balance__quota {
+  color: grey;
+  padding: 0 5px;
+  background-color: #fff;
+  border: 1px solid rgb(118, 185, 118);
+  border-radius: 2px;  
 }
