--- a/src/scenes/home/topic_list/topic_list.css
+++ b/src/scenes/home/topic_list/topic_list.css
@@ -28,26 +28,26 @@
   font-size: 11px;
   padding: 5px;
   background-color: #bfbfbf;
+  position: relative;  
 }
 
 .topic_section__expand {
   font-size: 18px;
-  padding: 6px;
-  position: relative;
+  padding: 5px;
   cursor: pointer;
 }
 
 .topic_section__expand:hover {
-  transform: scale(1.2);
+  transform: scale(1.35);
 }
 
-.topic_section__expand:before {
+.topic_section__badge:before {
   position: absolute;
   left: 3px;
   top: 3px;
   border-radius: 100%;
-  height: 6px;
-  width: 6px;
+  height: 4px;
+  width: 4px;
   content: ' ';
   background-color: #fff;
 }
