--- a/src/components/ProgramToggle/ProgramToggle.css
+++ b/src/components/ProgramToggle/ProgramToggle.css
@@ -2,7 +2,7 @@
 .program_toggle {
   text-transform: uppercase;
   font-size: 12px;
-  position: absolute;
+  position: fixed;
   top: 0px;
   left: 15px;
   padding: 3px 5px; 
