--- a/src/scenes/Home/topic_list/topic_list.css
+++ b/src/scenes/Home/topic_list/topic_list.css
@@ -59,6 +59,14 @@
   transform: scale(1.2);
 }
 
+.topic_section__icon {
+  display: inline-block;
+  width: 0.7em;
+  height: 0.7em;
+  margin-left: 5px;
+  opacity: 0.6;
+}
+
 .point_pulse {
 	animation: point_pulse 1s infinite;
   transform-origin:70% 70%;
