--- a/src/components/Balance/balance.css
+++ b/src/components/Balance/balance.css
@@ -14,6 +14,7 @@
 }
 
 .balance__counter {
+  color: #fff;  
   padding: 5px;
 }
 
@@ -23,4 +24,5 @@
   background-color: #fff;
   border: 1px solid rgb(118, 185, 118);
   border-radius: 2px;  
+  cursor: pointer;
 }
