--- a/src/scenes/MenuBar/MenuBar.css
+++ b/src/scenes/MenuBar/MenuBar.css
@@ -7,6 +7,10 @@
   width: 100%;
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
-  flex-wrap: wrap;
+  justify-content: space-between;
+  flex-wrap: nowrap;
+}
+
+.nav_bar--hide {
+  position: none;
 }
