--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,7 @@
+@import './font/stylesheet.css';
+
 body {
+  font-family: 'Ubuntu', sans-serif;
   margin: 0;
   padding: 0;
-  font-family: sans-serif; }
+}
