--- a/src/scenes/App/App.css
+++ b/src/scenes/App/App.css
@@ -61,7 +61,7 @@ a:visited {
 }
 
 .main { 
-  font-family: 'Courier New',Courier,'Lucida Sans Typewriter','Lucida Typewriter',monospace;
+  /* font-family: 'Courier New',Courier,'Lucida Sans Typewriter','Lucida Typewriter',monospace; */
   margin-top: 10px;
 }
 
