--- a/src/scenes/Topic/topic.css
+++ b/src/scenes/Topic/topic.css
@@ -35,8 +35,9 @@
 .topic__bottom {
   display: flex;
   flex-direction: row;
-  align-items: center;
-  justify-content: flex-start;
+  flex-wrap: wrap;
+  /* align-items: center; */
+  justify-content: space-between;
   margin-bottom: 20px;
 }
 
@@ -47,7 +48,6 @@
 
 .topic__impact {
   font-size: 16px;
-  
 }
 
 .topic__match {
