--- a/src/scenes/home/home.css
+++ b/src/scenes/home/home.css
@@ -20,9 +20,9 @@
   vertical-align: middle;
 }
 
-.view_toggle__img {
-  max-width: 20px;
-  margin-left: 5px;
+.view_toggle {
+  display: flex;
+  justify-content: flex-end;
 }
 
 @media (max-width: 401px) {
