--- a/src/scenes/topic/topic.css
+++ b/src/scenes/topic/topic.css
@@ -50,6 +50,10 @@
   font-size: 16px;
 }
 
+.topic__category {
+  margin-right: 5px;
+}
+
 .topic__match {
   color: #000;
   font-size: 13px;
@@ -81,4 +85,14 @@
   padding-bottom: 1px;
   background-color: #f1f1f1;
   border-radius: 5px;
+}
+
+.tags__title {
+  border: 2px solid gainsboro;
+  background-color: gainsboro;
+  border-radius: 5px;
+  padding: 0 5px;
+  margin-right: 2px;
+  font-size: 14px;
+  margin-right: 5px;
 }
