--- a/src/components/ProgramToggle/ProgramToggle.css
+++ b/src/components/ProgramToggle/ProgramToggle.css
@@ -1,19 +1,26 @@
 
 .program_toggle {
-  text-transform: uppercase;
-  font-size: 12px;
+  font-size: 14px;
   position: fixed;
-  top: 0px;
-  left: 15px;
-  padding: 3px 5px; 
+  padding: 5px; 
   color: #fff;
   background-color: #76b976 ;
-  border-radius: 0 0 5px 5px;
+  border-radius: 0 5px 5px 0;
   z-index: 3;
   cursor: pointer;
-  transition: all 0.25s ease-in-out;  
+  transition: all 0.25s ease-in-out;
+
+  top: 10px;
+  left: -80px;
 }
 
 .program_toggle:hover {
-  background-color: #449d44;  
+  background-color: #449d44;
+  left: 0px;  
+}
+
+.program_toggle__sign {
+  font-size: 16px;
+  margin-left: 15px;
+  margin-right: 5px;
 }
