--- a/src/scenes/Topic/topic.css
+++ b/src/scenes/Topic/topic.css
@@ -55,7 +55,6 @@
   border-radius: 10px;
   margin-top: 10px;
   margin-bottom: 10px;
-  min-height: 150px;
 }
 
 .topic__match {
@@ -110,4 +109,9 @@
 
 .topic__link_icon:hover {
   transform: scale(1.1);
+}
+
+.topic__edit_panel {
+  border: none;
+  margin-bottom: 0px;
 }
