--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,4 +1,3 @@
-
 .header {
   display: flex;
   flex-wrap: wrap;
@@ -7,13 +6,24 @@
   margin: 10px 0 20px;
 }
 
+.header__text {
+  font-size: 11px;
+  position: absolute;
+  top: 70px;
+}
+
 @media (max-width: 401px) {
   .header {
     justify-content: space-around;
+  }
+
+  .header__text {
+    position: static;
+    text-align: center;
   }
 }
 
 .header__balance {
   padding-top: 5px;
   margin: 5px 0;
-} 
+}
