--- a/src/components/TextEditor/TextEditor.css
+++ b/src/components/TextEditor/TextEditor.css
@@ -1,12 +1,7 @@
 .text_editor {
   margin: 10px 0;
   border: 1px solid #ccc;
-  border-radius: 4px; 
-  box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
-  min-height: 200px;
-}
-
-.text_editor .ql-snow {
-  border: none !important;
-  font-family: inherit !important;  
+  border-radius: 4px;
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+  min-height: 400px;
 }
