--- a/src/components/Balance/balance.css
+++ b/src/components/Balance/balance.css
@@ -2,19 +2,27 @@
   color: #fff;
   font-size: 13px;
   margin: 0 auto;
-  display: inline-block;  
+  display: inline-block;
   min-width: 25px;
   text-align: center;
-  margin: 0 5px;
   vertical-align: middle;
-  
   background-color: rgb(118, 185, 118);
-  border: 1px solid rgb(118, 185, 118);  
+  border: 1px solid rgb(118, 185, 118);
   border-radius: 2px;
+  margin-bottom: 5px;
+  cursor: pointer;
+}
+
+.balance__topic {
+  cursor: default;
+}
+
+.balance__only {
+  margin: 0 5px;
 }
 
 .balance__counter {
-  color: #fff;  
+  color: #fff;
   padding: 5px;
 }
 
@@ -23,6 +31,5 @@
   padding: 0 5px;
   background-color: #fff;
   border: 1px solid rgb(118, 185, 118);
-  border-radius: 2px;  
-  cursor: pointer;
+  border-radius: 2px;
 }
