--- a/src/scenes/App/App.css
+++ b/src/scenes/App/App.css
@@ -69,10 +69,11 @@ a:visited {
 .main h1 {
   font-size: 1.5em;
   margin-top: 20px;
+  font-weight: 600;
 }
 
 .main h2 {
-  font-size: 1.5em;
+  font-size: 1.4em;
   margin-top: 16px;
 }
 
