TopicView > style compatibility

--- a/src/scenes/TopicView/TopicView.css
+++ b/src/scenes/TopicView/TopicView.css
@@ -11,6 +11,7 @@
   line-height: 1.42857143;
   color: #555;
   background-color: #fff;
+  z-index: 11; /* compatibility with the text editor */
 }
 
 .topic_view__modal {
