--- a/src/components/TextEditor/TextEditor.css
+++ b/src/components/TextEditor/TextEditor.css
@@ -5,10 +5,16 @@
   border-radius: 4px;
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
   min-height: 200px;
+  overflow-y: hidden;
 }
 
 .text_editor__toolbar {
   border-bottom: 0px;
+  font-family: inherit;
+}
+
+.text_editor__disabled {
+  display: none;
 }
 
 .text_editor__toolbar select {
@@ -16,18 +22,18 @@
 }
 
 .text_editor__toolbar div > span::after {
-  content: '\21F3';
+  content: '\2195';
   position: absolute;
+  font-weight: bold;
   top: 2px;
   right: 20px;
-  transform: scale(1.2);
+  transform: scale(1.3);
   z-index: 2;
   border-color: black;
 }
 
 .text_editor__toolbar button {
   border: none;
-  /* background: transparent; */
 }
 
 .text_editor__toolbar button:hover {
